[gd_scene load_steps=24 format=3 uid="uid://5knq6hwxfdqf"]

[ext_resource type="Script" path="res://scripts/Enemy_scripts/skeleton.gd" id="1_pmjfb"]
[ext_resource type="Texture2D" uid="uid://dc88hder5dyod" path="res://assets/level3_assets/enemy/skeleton_enemy/Skeleton enemy.png" id="2_k1q7b"]
[ext_resource type="Texture2D" uid="uid://dya2jrophxbvl" path="res://assets/level3_assets/enemy/health_bar/enemy_health_bar_foreground_000.png" id="3_7sdvm"]
[ext_resource type="Texture2D" uid="uid://173qv8xifptp" path="res://assets/level3_assets/enemy/health_bar/enemy_health_bar_000.png" id="4_yb3ou"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_vnqud"]
radius = 6.0

[sub_resource type="Animation" id="Animation_gc8t8"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Attack_to_player/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_gylo7"]
resource_name = "attack"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 12]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Attack_to_player/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}

[sub_resource type="Animation" id="Animation_1b2qa"]
resource_name = "die"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 25]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}

[sub_resource type="Animation" id="Animation_3sf6n"]
resource_name = "walk"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 37]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8nnkc"]
_data = {
"RESET": SubResource("Animation_gc8t8"),
"attack": SubResource("Animation_gylo7"),
"die": SubResource("Animation_1b2qa"),
"walk": SubResource("Animation_3sf6n")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_5kmus"]
animation = &"attack"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_m3253"]
animation = &"die"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_6wmql"]
animation = &"walk"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_uyokk"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_uo50t"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_6qgp3"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_kjo8n"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_y7o3m"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ttchs"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_2xoqa"]
states/attack/node = SubResource("AnimationNodeAnimation_5kmus")
states/attack/position = Vector2(510, -48)
states/die/node = SubResource("AnimationNodeAnimation_m3253")
states/die/position = Vector2(782, 100)
states/walk/node = SubResource("AnimationNodeAnimation_6wmql")
states/walk/position = Vector2(344, 100)
transitions = ["Start", "walk", SubResource("AnimationNodeStateMachineTransition_uyokk"), "die", "End", SubResource("AnimationNodeStateMachineTransition_uo50t"), "walk", "attack", SubResource("AnimationNodeStateMachineTransition_6qgp3"), "attack", "walk", SubResource("AnimationNodeStateMachineTransition_kjo8n"), "walk", "die", SubResource("AnimationNodeStateMachineTransition_y7o3m"), "attack", "die", SubResource("AnimationNodeStateMachineTransition_ttchs")]
graph_offset = Vector2(-27, -96)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_b7ofb"]
size = Vector2(32.5, 11)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ejbo6"]
size = Vector2(26, 12)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3r2nk"]
size = Vector2(67, 11)

[node name="CharacterBody2D" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 5
script = ExtResource("1_pmjfb")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_k1q7b")
hframes = 13
vframes = 5
frame = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_vnqud")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_8nnkc")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_2xoqa")
anim_player = NodePath("../AnimationPlayer")

[node name="Detect_player" type="Area2D" parent="."]
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detect_player"]
position = Vector2(20.75, 0)
shape = SubResource("RectangleShape2D_b7ofb")

[node name="Attack_to_player" type="Area2D" parent="."]
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Attack_to_player"]
position = Vector2(16, 0)
shape = SubResource("RectangleShape2D_ejbo6")
disabled = true
debug_color = Color(0.601922, 0.480559, 0.674887, 0.42)

[node name="Player_is_back" type="Area2D" parent="."]
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player_is_back"]
position = Vector2(-39.5, 0.5)
shape = SubResource("RectangleShape2D_3r2nk")

[node name="TextureProgressBar" type="TextureProgressBar" parent="."]
offset_left = -19.0
offset_top = -24.0
offset_right = 237.0
offset_bottom = 8.0
scale = Vector2(0.15, 0.15)
value = 100.0
texture_under = ExtResource("3_7sdvm")
texture_progress = ExtResource("4_yb3ou")

[node name="Timer" type="Timer" parent="."]

[connection signal="area_entered" from="Detect_player" to="." method="_on_detect_player_area_entered"]
[connection signal="area_exited" from="Detect_player" to="." method="_on_detect_player_area_exited"]
[connection signal="area_entered" from="Attack_to_player" to="." method="_on_attack_to_player_area_entered"]
[connection signal="area_entered" from="Player_is_back" to="." method="_on_player_is_back_area_entered"]
[connection signal="body_entered" from="Player_is_back" to="." method="_on_player_is_back_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
